--- a/index.html
+++ b/index.html
@@ -310,18 +310,59 @@
             </section>
 
             <!--==================== QUALIFICATION ====================-->
-            <section class="qualification section">
+            <!-- <section class="qualification section">
 
-            </section>
+            </section> -->
 
             <!--==================== SERVICES ====================-->
-            <section class="services section" id="services">
+            <!-- <section class="services section" id="services">
                 
-            </section>
+            </section> -->
 
             <!--==================== PORTFOLIO ====================-->
             <section class="portfolio section" id="portfolio">
-                
+                <h2 class="section__title">Portfolio</h2>
+                <span class="section__subtitle">Most recent work</span>
+                <div class="portfolio__container container">
+                    <div>
+                        <!--==================== PORTFOLIO 1====================-->
+                        <div class="portfolio__content grid">
+                            <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Modern Website1</h3>
+                                <p class="portfolio__description">1Website adaptable to all devices, and animated interactions.</p>
+                                <a href="#" class="button button--flex button--small portfolio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <!--==================== PORTFOLIO 2====================-->
+                        <div class="portfolio__content grid">
+                            <img src="assets/img/portfolio2.jpg" alt="" class="portfolio__img">
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Modern Website2</h3>
+                                <p class="portfolio__description">2Website adaptable to all devices, and animated interactions.</p>
+                                <a href="#" class="button button--flex button--small portfolio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <!--==================== PORTFOLIO 3====================-->
+                        <div class="portfolio__content grid">
+                            <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Modern Website3</h3>
+                                <p class="portfolio__description">3Website adaptable to all devices, and animated interactions.</p>
+                                <a href="#" class="button button--flex button--small portfolio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <!--==================== PROJECT IN MIND ====================-->
