--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                                 <textarea name="" id="message" cols="0" rows="7" class="contact__input"></textarea>
                             </div>
                             <div class="send__message-button">
-                                <a class="button button--flex" type="submit" onclick="sendMail(event)">
+                                <a class="button button--flex" onclick="sendMail(event)">
                                     Send Message
                                     <i class="uil uil-message button__icon"></i>
                                 </a>
